debugging for rendering

--- a/CS201final.Rmd
+++ b/CS201final.Rmd
@@ -2,7 +2,7 @@
 title: "CS201 Flexdashboard"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: columns
+    orientation: rows
     vertical_layout: fill
     source_code: embed
     theme: 
